reverse-proxy/foreman/foreman-route.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: foreman
  namespace: traefik
spec:
  type: ExternalName
  externalName: foreman.kube.buc.local


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: foreman-route
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`foreman.public.buc.ddns.info`)
    middlewares:
    - name: external-access
    services:
    - name: foreman
      passHostHeader: false
      port: 80
  tls:
    certResolver: letsencrypt
